[2008-10-13]
- starting Twitter search from last tweet upwards
