@@ -1,5 +1,3 @@
-## fire up Twitter search
-## derive trackings from search
 ## conduct trackings
 ## start note
 ## extend or finish note
