@@ -1,3 +1,6 @@
 [2008-10-13]
 - starting Twitter search from last tweet upwards
 
+[2008-10-15]
+- adding a tracking for every root tweet
+
